fix: fix horizontal overflow with code blocks

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,10 @@ a {
   border-bottom: 1px dashed;
 }
 
+pre {
+  white-space: normal;
+}
+
 .members {
   display: flex;
   flex-wrap: wrap;
